--- a/LearningNunit/LearningNunit.csproj
+++ b/LearningNunit/LearningNunit.csproj
@@ -55,6 +55,7 @@
     <Compile Include="ScreenshotTaker.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitTest2.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
